--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -11,8 +11,9 @@
 :root {
   font-family: Inter, Avenir, Helvetica, Arial, sans-serif;
   font-size: 16px;
-  line-height: 24px;
   font-weight: 400;
+  line-height: 1.5;
+  letter-spacing: 0.04em;
 
   color: #242424;
   background-color: rgba(255, 255, 255, 0.87);
@@ -22,4 +23,120 @@
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   -webkit-text-size-adjust: 100%;
+}
+*,
+::before,
+::after {
+  box-sizing: border-box;
+}
+
+.container {
+  margin: 40px;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+}
+
+.search-form {
+  display: flex;
+  justify-content: center;
+  gap: 8px;
+  margin-bottom: 40px;
+}
+
+.search-input {
+  width: 272px;
+  height: 40px;
+  line-height: 1.5;
+  color: #808080;
+  padding: 8px 16px;
+  border-radius: 4px;
+  background-color: #fff;
+  border: 1px solid #808080;
+  outline: none;
+}
+.search-input:hover {
+  border-color: #888;
+}
+
+.search-input:focus {
+  border-color: #4e75ff;
+}
+
+.search-btn {
+  border-radius: 8px;
+  padding: 8px 16px;
+  width: 91px;
+  height: 40px;
+  background: #4e75ff;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.04em;
+  color: #fff;
+  border: none;
+}
+
+.search-btn:hover {
+  background-color: #6c8cff;
+}
+
+.gallery {
+  display: flex;
+  justify-content: center;
+  margin-left: auto;
+  margin-right: auto;
+  flex-wrap: wrap;
+  gap: 24px;
+  padding: 0;
+}
+
+.gallery-web {
+  width: 360px;
+  height: auto;
+  border: 1px solid #808080;
+  text-align: center;
+  max-height: 200px;
+  overflow: hidden;
+  object-fit: cover;
+  border-top-left-radius: 5px;
+  border-top-right-radius: 5px;
+}
+
+.comments-strage {
+  height: 48px;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  background-color: #fff;
+  flex-wrap: wrap;
+  text-align: center;
+  border: 1px solid #808080;
+  flex-direction: column;
+}
+
+.comments-strage-list {
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 2;
+  letter-spacing: 0.04em;
+  color: #2e2f42;
+
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+  font-size: 12px;
+  line-height: 2;
+}
+
+.windows {
+  font-weight: 600;
+  font-size: 12px;
+  line-height: 1.33333;
+  letter-spacing: 0.04em;
+  color: #2e2f42;
+}
+
+.iziToast:after {
+  background: #ef4040;
 }
