--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -93,14 +93,12 @@
 
 .gallery-web {
   width: 360px;
-  height: auto;
+  height: 248px;
   border: 1px solid #808080;
-  text-align: center;
-  max-height: 200px;
-  overflow: hidden;
   object-fit: cover;
-  border-top-left-radius: 5px;
-  border-top-right-radius: 5px;
+  border-top-left-radius: 4px;
+  border-top-right-radius: 4px;
+  border-bottom: none;
 }
 
 .comments-strage {
@@ -113,6 +111,7 @@
   text-align: center;
   border: 1px solid #808080;
   flex-direction: column;
+  border-top: none;
 }
 
 .comments-strage-list {
